# aperture

./: .gitignore  README.md  pyproject.toml  setup_environment.sh
aperture/: __init__.py  ui.py
aperture/core/: __init__.py  autosave.py  file.py  snapshot.py
